--- a/proyecto-aprender-4.0/views/index.ejs
+++ b/proyecto-aprender-4.0/views/index.ejs
@@ -7,9 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>TITULO</h1>
-    <div class=""></div>
-    <button class="bota">hola</button>
+    <h1>DULCERIA</h1>
+    <div class="listaProductos">
+        <div class="producto">cofler 10.000 muy grande	Block	Chocolate</div>
+        <div class="producto">Chocolate Milka Aireado Con Almendras	7.145	grande</div>
+        <div class="producto">13000	muy grande	Menta cristal	Caramelos</div>
+        <div class="producto">Minitorta Brownie	1900	mediano	Aguila	alfajor</div>
+        <div class="producto">1100	mediano	Rocklets	confites</div>
+    </div>
+
+
+
+
     <script src="/js/index.js"></script>
 </body>
 </html>
